--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "camelcase-keys": "^6.2.2",
+    "dotenv": "^8.2.0",
+    "formik": "^2.2.0",
     "js-cookie": "^2.2.1",
+    "ley": "^0.6.0",
     "next": "9.5.3",
     "next-cookies": "^2.0.3",
+    "postgres": "^1.0.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "yup": "^0.29.3"
   }
 }
