--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "camelcase-keys": "^6.2.2",
     "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
     "formik": "^2.2.0",
     "js-cookie": "^2.2.1",
     "ley": "^0.6.0",
