--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "heroku-postbuild": "yarn migrate up && yarn build",
     "start": "next start -p ${PORT:-\"3000\"}",
     "migrate": "dotenv ley"
   },
+  "cacheDirectories": [
+    ".next/cache"
+  ],
   "dependencies": {
     "camelcase-keys": "^6.2.2",
     "dotenv": "^8.2.0",
