--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "yup": "^0.29.3"
+  },
+  "devDependencies": {
+    "cypress": "^5.4.0",
+    "jest": "^26.6.0"
   }
 }
